--- a/SingUp.html
+++ b/SingUp.html
@@ -46,7 +46,7 @@
         <label for="" class="label">Confirm Password</label>
       </div>
 
-      <input type="submit" class="submitBtn" value="Sign up">
+      <input type="submit" class="submitBtn" value="SignUP">
     </form>
   </div>
 </body>
